--- a/views/contactUs.html
+++ b/views/contactUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/product.css">
 </head>
@@ -21,6 +21,7 @@
     <main>
         <form class="contact-form" action="/success" method="POST">
             <div class="form-control">
+                <h4>Fill Info</h4>
                 <label for="title">Name  </label>   <input type="text" name="name">
                 <label for="email">Email  </label>  <input type="text" name="email">
             </div>
